syntax = "proto3";

// 命 令 号: 1032
// 命令名称: voice_asr_start
// 命令描述: 启动ASR
// 文件名称: dec1032_vr_asr_start.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceAsrStart";

message VoiceAsrStartRequest {
  // ATTR: REQUSET
  string language = 1;
  repeated  string key_word = 2;
}

message VoiceAsrStartResponse {

}
